--- a/financeTracker/src/main/resources/application.properties
+++ b/financeTracker/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 #spring.mvc.view.suffix=.jsp
 #Disable open session in view
 spring.jpa.open-in-view=false
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
